crates/iktia-core/tests/fixtures/conformance/rejected/unkeyed-map.wc.tsx
import { computed } from "@iktia/core"

export function UnkeyedMap() {
  const items = computed(() => ["One", "Two"])

  return (
    <ul>
      {items().map((item) => <li>{item}</li>)}
    </ul>
  )
}
